--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
    <meta property="og:title" content="ALICE CAPOCEFALO">
    <meta property="og:type" content="website">
-   <meta property="og:url" content="https://nikyfel.github.io/nicole-feltrin/">
+   <meta property="og:url" content="https://aliscapo.github.io/My-Portfolio/">
    <meta property="image" content="asset/img/favicon.png">
    <title>Alice Capocefalo UX-UI Designer</title>
    <link rel="icon" type="image/x-icon" href="images/Favicon.png">
@@ -97,8 +97,6 @@
         <div class="item">HTML/CSS</div>
       </div>
       <br>
-      <br>
-      <br>
       <div class= 'skill'>
         <h3><strong>SOFT SKILLS</strong></h3>
       </div>
@@ -114,6 +112,21 @@
               <div class="it">Precision</div>
               <div class="it">Propensity to listen</div>
             </div>
+            <br>
+            <div class= 'skill'>
+              <h3><strong>TOOLS I USE</strong></h3>
+            </div>
+                  <br>
+                  <div class="cont">
+                    <div class="it">Figma</div>
+                    <div class="it">Canva</div>
+                    <div class="it">Lightroom</div>
+                    <div class="it">GitHub</div>
+                    <div class="it">Atom</div>
+                    <div class="it">Illustrator</div>
+                    <div class="it">Photoshop</div>
+                    <div class="it">InDesign</div>
+                  </div>
 
 
 
@@ -245,3 +258,4 @@
 </footer>
 </body>
 </html>
+
