--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
    <meta charset='UTF-8'>
    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+   <meta name='description' content='Freelance UX/UI Designer specializing in engaging digital experience design and visually appealing interfaces. Explore my portfolio and discover how I can improve your user experience!'>
+   <meta name='robots' content='index, follow'>
    <meta http-equiv='X-UA-Compatible' content='ie=edge'>
    <meta property="og:title" content="ALICE CAPOCEFALO">
    <meta property="og:type" content="website">
@@ -212,17 +214,18 @@
   <div class='contacts-container' id='contacts'>
     <div class='contacts-content'>
       <h3><strong>CONTACT ME</strong></h3>
-      <p>If you are interested in my profile, have any question or just want to exchange ideas, feel free to contact me through this form!
+      <p>If you are interested in my profile, have any question or just want to exchange ideas, feel free to contact me via the form by clicking the first button below!
         <br>
         I will answer you as soon as possible.</p>
 
+
        <!--social!-->
           <div class='social-container'>
+             <a href='contact.html' target="_blank" rel = “noopener”><img src='images/Email.png' alt="Email"></a>
              <a href='https://www.instagram.com/aliscvpo/' target="_blank" rel = “noopener”><img src='images/Instagram.png' alt="Instagram"></a>
              <a href='https://www.linkedin.com/in/alice-capocefalo-31576925a/' target="_blank" rel = “noopener”><img src='images/LinkedIn.png'alt="LinkedIn"></a>
              <a href='https://github.com/AlisCapo' target="_blank" rel = “noopener”><img src='images/GitHub.png' alt="GitHub"></a>
           </div>
-
     </div>
   </div>
 
@@ -234,28 +237,3 @@
   <img src='images/Freccia.png' alt="Freccia per tornare in alto">
   </i>
 </a>
-
-<!--Contact Me-->
-<footer>
-  <section id="contact-me">
-      <div class="contact-me-text">
-          <div class="contact-form">
-              <form action="mailto:alice.capocefalo@gmail.com" method="POST" enctype="multipart/form-data" name="EmailForm">
-                  Name:<br>
-                  <input type="text" required size="100" name="Contact-Name" placeholder="*Your name"><br><br>
-                  Email:<br>
-                  <input type="email" required size="100" name="Contact-Email" placeholder="*Your Email"><br><br>
-                  City, Nation:<br>
-                  <input type="text" size="100" name="Location" placeholder="*Your City and Nation"><br><br>
-                  Message:<br>
-                  <textarea name="Contact-Message" required rows="5" cols="105" placeholder="*Write here your message"></textarea>
-                  <br><br>
-                  <a href="mailto:alice.capocefalo@gmail.com" class="button" type="submit">SEND MESSAGE</a>
-              </form>
-          </div>
-      </div>
-  </section>
-</footer>
-</body>
-</html>
-
