--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="item">Graphic Design</div>
         <div class="item">Brand Identity</div>
         <div class="item">User Research</div>
-        <div class="item">Wireframing and Prototyping</div>
+        <div class="item">Wireframing</div>
+        <div class="item">Prototyping</div>
         <div class="item">Accessibility</div>
         <div class="item">Design System</div>
         <div class="item">User Testing</div>
