--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <br>
     <br>
       <h1><Strong>HEY, IT’S NICE TO MEET YOU, <br>I’M ALICE</Strong></h1><br>
-      <h2>User Experience and User Interface Deisgner</h2>
+      <h2>User Experience and User Interface Designer</h2>
       <br>
       <h2>based in Modena and with a passion for design and visual communication.</h2>
   </div>
@@ -67,17 +67,15 @@
    <div class='presentation-content'>
       <h3><Strong>ABOUT ME</Strong></h3>
       <br>
-        <p>I was born in 2000, I graduated from the High School of Applied Sciences and immediately after I worked for 2 years in the municipal environment as an employee.
+        <p>Junior Graphic Designer, born in the 2000s, specialized in UX/UI Designer, with a creative approach and a passion for designing intuitive, accessible and user experience-focused digital solutions.
            <br>
-           <br>After that experience I understood that it wasn't the right path for me, as it didn't give me stimulation and took away all my energy.
+           <br>I completed a theoretical and practical master's degree at start2impact, during which I carried out 14 projects developing different UX/UI Design skills using tools such as Figma and Sketch.
+           <br>
+           <br>My previous experience as an office clerk allowed me to hone a strong orientation towards understanding customer needs, solving complex problems and effective communication, skills that I now apply in digital design.
            <br>
            <br>Today I think that the right job for me is a dynamic, creative job, always evolving and capable of encouraging me every day.
-           <br>
-           <br>This is why I decided to undertake the UX/UI Design path with start2impact University.
-           <br>
-           <br>My goal is to work as a Freelancer in this field and one day open my own business and also have my own team.
-        <br>
-        <br><a href="https://drive.google.com/file/d/1uWr9PNhuK1hABM-7PdMdAo1YBy0Q2iEg/view?usp=sharing" target="_blank" rel = “noopener”>LOOK MY CV</a></p>
+          <br>
+        <br><a href="https://drive.google.com/file/d/1iHJEPP1pNje7Y3gbBT7O3TF096vS6Gd3/view?usp=sharing" target="_blank" rel = “noopener”>LOOK MY CV</a></p>
     </div>
   </div>
   <br>
@@ -92,8 +90,7 @@
         <div class="item">Graphic Design</div>
         <div class="item">Brand Identity</div>
         <div class="item">User Research</div>
-        <div class="item">Wireframing</div>
-        <div class="item">Prototyping</div>
+        <div class="item">Wireframing and Prototyping</div>
         <div class="item">Accessibility</div>
         <div class="item">Design System</div>
         <div class="item">User Testing</div>
@@ -144,6 +141,16 @@
     </div>
 
   <div class='row'>
+
+    <div class='card'>
+      <div class='card-header'>
+        <h4> <strong>REBRANDING & REDESIGN SITO THREE VINTAGE</strong> </h4>
+      </div>
+      <div class='card-body'>
+        <p>I improved an existing website.</p>
+        <a href='https://drive.google.com/file/d/1Z_OJR13NUA3TTEHaY5QSdLLcf8KX_iho/view?usp=sharing' target="_blank" rel = “noopener” class=btn>LOOK</a>
+      </div>
+    </div>
 
     <div class='card'>
       <div class='card-header'>
@@ -202,6 +209,26 @@
       <div class='card-body'>
         <p>Creation of a UI prototype - desktop and mobile version.</p>
         <a href='https://drive.google.com/file/d/13zgQlqK_3uz0iSpLsACRQqokDl8eo8oO/view?usp=sharing' target="_blank" rel = “noopener” class=btn>LOOK</a>
+      </div>
+    </div>
+
+    <div class='card'>
+      <div class='card-header'>
+        <h4> <strong>HTML & CSS</strong> </h4>
+      </div>
+      <div class='card-body'>
+        <p>Personal portfolio creation with html and css.</p>
+        <a href='https://drive.google.com/file/d/1XI-FNJ_16ICBDzX7mMIz0FvOK03Wu1-Z/view?usp=sharing' target="_blank" rel = “noopener” class=btn>LOOK</a>
+      </div>
+    </div>
+
+    <div class='card'>
+      <div class='card-header'>
+        <h4> <strong>User Test</strong> </h4>
+      </div>
+      <div class='card-body'>
+        <p>Test prototypes to identify strengths and weaknesses.</p>
+        <a href='https://drive.google.com/file/d/1Mp6gDuNVetMq2TD6Hva3vpXKAslc1vEP/view?usp=sharing' target="_blank" rel = “noopener” class=btn>LOOK</a>
       </div>
     </div>
 
