--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <div class="item">Graphic Design</div>
         <div class="item">Brand Identity</div>
         <div class="item">User Research</div>
-        <div class="item">Wireframing and Prototyping</div>
+        <div class="item">Wireframing</div>
+        <div class="item">Prototyping</div>
         <div class="item">Accessibility</div>
         <div class="item">Design System</div>
         <div class="item">User Testing</div>
@@ -126,6 +127,9 @@
                     <div class="it">Illustrator</div>
                     <div class="it">Photoshop</div>
                     <div class="it">InDesign</div>
+                    <div class="it">WordPress</div>
+                    <div class="it">Wix</div>
+                    <div class="it">Shopify</div>
                   </div>
 
 
